Kubernetes_manifests/webapp_deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: webapp
spec: {}
status: {}

---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: webapp-deploy
  name: webapp-deploy
  namespace: webapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webapp-app
      env: dev
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: webapp-app
        env: dev
    spec:
      containers:
      - image: docker.io/sandaruwanr/k8s_simple_web:v1.00
        name: project-moon-n2jmp
        resources: {}
status: {}

---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: webapp-svc
  name: webapp-svc
  namespace: webapp
spec:
  ports:
  - name: webapp-svc
    port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    app: webapp-app
    env: dev
  type: NodePort
status:
  loadBalancer: {}
